apps/base/billing-redis/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-redis
  template:
    metadata:
      labels:
        app: billing-redis
    spec:
      containers:
      - name: billing-redis
        image: placeholder
        ports:
        - containerPort: 8080
