apps/base/billing-redis/service.yml
apiVersion: v1
kind: Service
metadata:
  name: billing-redis
spec:
  selector:
    app: billing-redis
  ports:
  - port: 80
    targetPort: 8080
